# housing-ml-crud

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: housing.csv
notebooks/: exploration.ipynb
src/: app.py  data.py  model.py
