[project]
name = "housing-ml-crud"
version = "0.1.0"
description = "Application CRUD + ML sur les données immobilières California Housing"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
]
